--- a/templates/input.html
+++ b/templates/input.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color: yellow">
 <center><h3>SELECT THE DOGS</h3></center>
-<form action="http://localhost:5000/" method="post">
+<form method="post">
  <center>
      name :  <input type ="text" name='enter dog' placeholder="Enter name" required><br><br>
     <input type="submit"><br><br><br>
